# vtk-wasm

./: .gitignore  README.md  package-lock.json
.github/workflows/: website.yaml
docs/: index.md  news.md
docs/.vitepress/: config.mjs
docs/.vitepress/theme/: colors.css  index.js
docs/guide/: index.md
docs/guide/cpp/: app-1.md  app-2.md  app-3.md  index.md  setup.md
docs/guide/js/: bundler.md  index.md  plain.md
docs/guide/trame/: index.md  picking.md  widget.md
docs/guide/viewer/: data.md  index.md
docs/public/data/: bike-export.wazex  porsche.wazex  star-fighter.wazex  star-fighter2.wazex
docs/public/demo/: example.js  plain-javascript-annotation.html  plain-javascript-preload.html  plain-javascript.html  preload-plain-javascript.html  viewer-basic.html  viewer-porsche.html  viewer-starfighter.html  viewer-starfighter2.html
docs/public/demo/cpp-app-1/: index.html
docs/public/demo/simple-app/: index.html
docs/public/demo/simple-app/assets/: index-BC0IONio.js  index-BFGc5eGd.js  index-C-oi-tv4.js  index-DlDI4bss.js  index-linop_gd.css  index-pzZO3ka6.js
docs/public/js/: hero.js
docs/public/wasm32/9.5.0/: vtkWebAssembly.mjs  vtkWebAssemblyAsync.mjs  vtkWebAssemblyInterface.mjs  vtkWebAssemblyInterfaceAsync.mjs
docs/public/wasm32/latest/: version  vtkWebAssembly.mjs  vtkWebAssemblyAsync.mjs
docs/usecase/: index.md
examples/cpp/cone/: CMakeLists.txt  README.md  main.cpp
examples/js/simple-app/: index.html  package-lock.json  package.json  vite.config.js
examples/js/simple-app/src/: example.js  main.js  style.css
examples/trame/picking/: README.md  pick.py  requirements.txt
examples/trame/picking/data/: porsche_10_0.vtp  porsche_11_0.vtp  porsche_12_0.vtp  porsche_13_0.vtp  porsche_14_0.vtp  porsche_15_0.vtp  porsche_16_0.vtp  porsche_17_0.vtp  porsche_18_0.vtp  porsche_19_0.vtp  porsche_1_0.vtp  porsche_20_0.vtp  porsche_21_0.vtp  porsche_22_0.vtp  porsche_2_0.vtp  porsche_3_0.vtp  porsche_4_0.vtp  porsche_5_0.vtp  porsche_6_0.vtp  porsche_7_0.vtp  porsche_8_0.vtp  porsche_9_0.vtp
examples/trame/simple/: README.md  cone.py  requirements.txt
examples/trame/widget/: README.md  clip.py  clip_rendering.py  requirements.txt  star-fighter.vtp
